fix(look&feel): description spacing in CheckboxSelect

--- a/client/look-and-feel/css/src/Form/Radio/Radio.scss
+++ b/client/look-and-feel/css/src/Form/Radio/Radio.scss
@@ -14,11 +14,9 @@
   }
 
   &__label-container {
-    --row-gap: calc(4 / var(--font-size-base) * 1rem);
-
     display: flex;
     flex-direction: column;
-    row-gap: var(--row-gap);
+    row-gap: calc(4 / var(--font-size-base) * 1rem);
   }
 
   &__label {
